crates/codira_codegen/src/snapshots/codira_codegen__test__function.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1045
expression: "\n    pub fn main() {\n    }\n    "

---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define void @main() {
body:
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

