crates/codira_codegen/src/snapshots/codira_codegen__test__function_arguments.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn main(a:i32) -> i32 {\n      a\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @main(i32 %0) {
body:
  ret i32 %0
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

